tests/paczka1/small_fuzzy/40661874.err
Error in line 2: Y1mIUSM3VDA S918 16,4
Error in line 3: WfBBZr S229 6,1
Error in line 15: WfBBZr S91{ 469,0
